--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         I am a final-year student at Republic Polytechnic, pursuing a diploma in Digital Design & Development. With a strong passion for Front-End Web Development, I am continuously honing my skills and exploring new opportunities in this ever-evolving field.
       </p>
       <p class="">
-        I specialize in HTML, CSS and JavaScript, with additional experience using tools such as Adobe Illustrator, Photoshop, and Canva. I'm bilingual, fluent in both English and Chinese, and have gained practical experience through internships that prepared me for real-world challenges.
+        Skilled in HTML, CSS, JavaScript, and design tools like Illustrator, Photoshop, and Canva. Bilingual (English, Chinese) with internship experience tackling real-world challenges.
       </p>
 
       <!-- Skills Section with animation -->
